Create ApplicationDbContext Only

--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source = ESSA-AHMED; Integrated Security = true; Initial Catalog = School; Trust Server Certificate = true; MultipleActiveResultSets = true "
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
