--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -8,5 +8,42 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MongoDB", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Error",
+        "MongoDB": "Error"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "MongoDB",
+        "Args": {
+          "databaseUrl": "your_mongodb_connection_string",
+          "collectionName": "your_mongodb_collection_name"
+        }
+      },
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source = ESSA-AHMED; Integrated Security = true; Initial Catalog = School; Trust Server Certificate = true; MultipleActiveResultSets = true",
+          "tableName": "Logger"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
