--- a/School.API/appsettings.json
+++ b/School.API/appsettings.json
@@ -1,6 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source = ESSA-AHMED; Integrated Security = true; Initial Catalog = School; Trust Server Certificate = true; MultipleActiveResultSets = true "
+    "DefaultConnection": "Data Source = ESSA-AHMED; Integrated Security = true; Initial Catalog = School; Trust Server Certificate = true; MultipleActiveResultSets = true"
+  },
+  "DbSettings": {
+    "ConnectionString": "mongodb+srv://essaahmeed00:essaahmeed00@cluster0.h1gpyta.mongodb.net/",
+    "DatabaseName": "School"
   },
   "Logging": {
     "LogLevel": {
@@ -11,10 +15,11 @@
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.MongoDB", "Serilog.Sinks.MSSqlServer" ],
     "MinimumLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Override": {
         "Microsoft": "Error",
-        "MongoDB": "Error"
+        "MongoDB": "Error",
+        "System": "Error"
       }
     },
     "WriteTo": [
@@ -24,7 +29,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "log.txt",
+          "path": "../logs/Logger-.log",
           "rollingInterval": "Day",
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
         }
@@ -32,15 +37,16 @@
       {
         "Name": "MongoDB",
         "Args": {
-          "databaseUrl": "your_mongodb_connection_string",
-          "collectionName": "your_mongodb_collection_name"
+          "databaseUrl": "mongodb+srv://essaahmeed00:essaahmeed00@cluster0.h1gpyta.mongodb.net/",
+          "collectionName": "Logs"
         }
       },
       {
         "Name": "MSSqlServer",
         "Args": {
           "connectionString": "Data Source = ESSA-AHMED; Integrated Security = true; Initial Catalog = School; Trust Server Certificate = true; MultipleActiveResultSets = true",
-          "tableName": "Logger"
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
         }
       }
     ]
