--- a/School.Core/School.Core.csproj
+++ b/School.Core/School.Core.csproj
@@ -10,4 +10,17 @@
     <ProjectReference Include="..\School.Services\School.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Feature\StudentFeature\Command\Result\" />
+    <Folder Include="Feature\StudentFeature\Command\Validation\" />
+    <Folder Include="Feature\StudentFeature\Query\Models\" />
+    <Folder Include="Feature\StudentFeature\Query\Result\" />
+    <Folder Include="Mapping\StudentMapping\QueryMapping\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="MediatR" Version="12.2.0" />
+  </ItemGroup>
+
 </Project>
